--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.9",
     "swiper": "^9.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
